--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
     border-radius: 4px;
 }
 
-.top-line, .bottom-line{
+.top-line,.bottom-line{
     font-family: "Segmented", sans-serif;
     height: 50px;
     font-size: 30px;
@@ -51,10 +51,11 @@ body{
 
     font-size: 24px;
     font-weight: bold;
-}
 
-.calc-button:active{
     background-color: rgb(230, 230, 230);
+    color: rgb(80, 80, 80);
+
+    transition: background-color 0.1s cubic-bezier(0,1,0,1);
 }
 
 .double-button{
@@ -62,12 +63,18 @@ body{
     aspect-ratio: 2;
 }
 
+.calc-button:active,.button-animation{
+    border-style: inset;
+    background-color: rgb(215, 215, 215);
+    color: rgb(30, 30, 30);
+}
+
 .operator-button{
     background-color: rgb(116, 116, 116);
     color: white;
 }
 
-.operator-button:active{
+.operator-button:active,.operator-button.button-animation{
     background-color: rgb(90, 90, 90);
     color: rgb(230, 230, 230);
 }
@@ -76,8 +83,9 @@ body{
     background-color: red;
 }
 
-#equals:active{
+#equals:active,#equals.button-animation{
     background-color: rgb(230, 0, 0);
+    color: rgb(230, 230, 230);
 }
 
 .main{
